--- a/Documentation~/manifest.json
+++ b/Documentation~/manifest.json
@@ -255,6 +255,28 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "images/UnityPackageManager.PNG",
+      "output": {
+        "resource": {
+          "relative_path": "images/UnityPackageManager.PNG"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "images/UnityPackageManager.PNG.meta",
+      "output": {
+        "resource": {
+          "relative_path": "images/UnityPackageManager.PNG.meta"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "images/echtnice_50x50.png",
       "output": {
         "resource": {
@@ -270,6 +292,28 @@
       "output": {
         "resource": {
           "relative_path": "images/echtnice_50x50.png.meta"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "images/header.png",
+      "output": {
+        "resource": {
+          "relative_path": "images/header.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "images/header.png.meta",
+      "output": {
+        "resource": {
+          "relative_path": "images/header.png.meta"
         }
       },
       "is_incremental": false,
